# AuraSense-SFSVC

./: .gitignore  CMakeLists.txt  CNAME  COMPLETION_SUMMARY.md  DASHBOARD_IMPLEMENTATION.md  Dockerfile  END_TO_END_CUSTOMER_JOURNEY_DEMO.md  README.md  SDK_USAGE.md  STREAMLIT_DEPLOYMENT.md  TESTING_GUIDE.md  about.html  animate.css  benchmark.html  careers.html  community.html  compare.html  contact.html  cookies.html  dashboard.html  design.css  docker-compose.yml  docs.html  faq.html  generate_demo_pdf.py  governance.html  index.html  layout.css  main.js  package-lock.json  platform.html  pricing.html  privacy.html  products.html  pyproject.toml  refund.html  requirements.txt  research.html  ringbuffer.js  server.cpp  (+10 more)
.github/workflows/: deploy.yml  pages.yml  static.yml
.streamlit/: config.toml
aiss_application/: AISS_Application_Form_AuraSense.md  Appendix_A_Project_Proposal.md  Appendix_B_Team_Structure_CV.md  Appendix_C_Track_Records.md  SUBMISSION_CHECKLIST.md  generate_pdfs.py
aurasense_sfsvc/: __init__.py  codec.py  detection.py  processor.py
benchmarks/: __init__.py  run_benchmark.py
build-ucrt/: CMakeCache.txt  Makefile  cmake_install.cmake  rt_core_py.pyd
css/: animate.css  layout.css  nepa.css  products.css
docs/: 404.html  CNAME  CPP_ARCHITECTURE_REVIEW.md  CPP_REVIEW_PROMPT.md  DEPLOYMENT_CHECKLIST.md  PILOT_ONBOARDING.md  SFSVC_DATASHEET.md  auraplay.html  contact.html  facade_map_v3.html  index.html  main.js  sfsvc.html  styles.css  vr-facade.html
docs/adr/: ADR-0001-nepa-hybrid-stdp-td.md  ROADMAP.md
docs/assets/: index-1BWmtYrA.js  index-Cikxfpgn.css
docs/assets/css/: responsive.css  style.css
docs/assets/js/: contact.js  main.js
docs/lib/: main.js
docs/pages/: index.html
examples/: simple_neurocodec_python.py
funding/applications/: aiss_application.md  cyberport_ccmf_cip_application.md  hkstp_ai_incubation_application.md
solutions/: facade.html
src/: adaptive_yolo.hpp  async_camera.cpp  aurasense_yolo_bond.h  crack_inference.hpp  crack_statistics.cpp  crack_statistics.hpp  degraded_mode_policy.cpp  degraded_mode_policy.hpp  detection_controller.cpp  detection_controller.h  detection_scheduler.hpp  drone_middleware.cpp  drone_middleware.hpp  encoder.cpp  encoder.hpp  engine.cpp  engine.h  failsafe.cpp  failsafe.hpp  failsafe_example.cpp  gating_engine.cpp  gating_engine.hpp  hardware_profiler.hpp  lockfree_queue.h  main.cpp  rt_core.cpp  rt_core.h  rt_core_pybind.cpp  signature_bank.cpp  signature_bank.hpp  types.cpp  types.h  uplink_serializer.cpp  uplink_serializer.h  ws_server.hpp  yolo_bridge.cpp  yolo_bridge.h  yolo_manager.h
tests/: test_delta_spike_avx2.cpp
website/: index.html  main.js  package-lock.json  package.json  styles.css
website/assets/: README.md
website/public/: 404.html  CNAME
website/src/: App.tsx  index.css  main.tsx
website/src/app/: Router.tsx
website/src/components/layout/: Footer.tsx  Header.tsx  PageContainer.tsx  SiteShell.tsx
website/src/components/sections/: FeatureGrid.tsx  Hero.tsx  NepaAgentSection.tsx  NepaMiddleLayerSection.tsx  ProductCard.tsx  RuntimeEvidenceSection.tsx  SFSVCHero.tsx  SFSVCInferenceOutput.tsx  SFSVCWorkflow.tsx
website/src/components/ui/: Button.tsx  CTAButton.tsx  Card.tsx  Divider.tsx  MetricCard.tsx  SectionHeading.tsx  SectionWrapper.tsx  StatusBadge.tsx  SurfaceCard.tsx  Tag.tsx
website/src/content/: about.ts  careers.ts  contact.ts  footer.ts  homepage.ts  navigation.ts  nepa-agent.ts  nermn.ts  nssim.ts  platform.ts  products.ts  resources.ts  sfsvc.ts
website/src/pages/: AboutPage.tsx  CareersPage.tsx  ContactPage.tsx  FAQPage.tsx  HomePage.tsx  LegalPage.tsx  NERMNPage.tsx  NSSIMPage.tsx  PlatformPage.tsx  ProductNERMNPage.tsx  ProductNSSIMPage.tsx  ProductSFSVCPage.tsx  ProductsPage.tsx  ResourcesPage.tsx  SFSVCPage.tsx
website/src/types/: content.ts
